--- a/pom.xml
+++ b/pom.xml
@@ -55,17 +55,7 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-
 		
-		<!-- CGLib for @Configuration -->
-		<dependency>
-			<groupId>cglib</groupId>
-			<artifactId>cglib-nodep</artifactId>
-			<version>${cglib.version}</version>
-			<scope>runtime</scope>
-		</dependency>
-
-
 	<!-- ***************************************************************************************** -->
 	<!-- **************************************** SERVLETS *************************************** -->
 	<!-- ***************************************************************************************** -->
@@ -163,12 +153,6 @@
 		
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-annotations</artifactId>
-			<version>3.4.0.GA</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-commons-annotations</artifactId>
 			<version>3.2.0.Final</version>
 		</dependency>
@@ -189,6 +173,12 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.12</version>
 		</dependency>
 
 	</dependencies>
