--- a/pom.xml
+++ b/pom.xml
@@ -86,9 +86,9 @@
 	<!-- ****************************************** JSON ***************************************** -->
 	<!-- ***************************************************************************************** -->
 		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20090211</version>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
 		</dependency>
 		
 	<!-- ***************************************************************************************** -->
@@ -163,15 +163,27 @@
 			<version>2.1_3</version>
 		</dependency>
 		
+	<!-- ***************************************************************************************** -->
+	<!-- ****************************************** LOG4J **************************************** -->
+	<!-- ***************************************************************************************** -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
 		</dependency>
 		
+	<!-- ***************************************************************************************** -->
+	<!-- ****************************************** SLF4J **************************************** -->
+	<!-- ***************************************************************************************** -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
+			<version>1.7.12</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
 			<version>1.7.12</version>
 		</dependency>
 
